--- a/webapp/vue-src/public/index.html
+++ b/webapp/vue-src/public/index.html
@@ -117,6 +117,10 @@
         margin-top: -10px;
         margin-left: 180px;
     }
+    .side-bar ul .menu li :hover{
+        background-color: #D9853B !important;
+
+    }
 
     .content {
         padding-left: 200px;
@@ -160,15 +164,14 @@
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
     <script src="https://use.fontawesome.com/e9b7441153.js"></script>
-
-
     <script>
+
+    $( document ).ready(function() {
+    $(".wrapper").toggleClass("active");
+    });
     $(".push_menu").click(function () {
         $(".wrapper").toggleClass("active");
     });
-    // $('.dashboard-btn, .sidebar-close-btn').on('click', function () {
-    //     $('#sidebar').toggleClass('sidebar-hidden');
-    //     $('#sidebar').toggleClass('sidebar-visible');
-    // });
+
 </script>
 </html>
