--- a/webapp/vue-src/public/index.html
+++ b/webapp/vue-src/public/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link rel="icon" href="<%= BASE_URL %>my945.png">
-        <title>Pacel Shop</title>
+        <title>Parcel Shop</title>
 
         <link rel="stylesheet"
             href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
